WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280031
REGRESSION(
282266@main
): Accessibility tree updates on large webpages are slow due to repeated m_pendingProtectedFromDeletionIDs.formUnion() calls
https://bugs.webkit.org/show_bug.cgi?id=280031
Summary
REGRESSION(282266@main): Accessibility tree updates on large webpages are slo...
Tyler Wilcock
Reported
2024-09-19 17:57:25 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-19 17:57:36 PDT
<
rdar://problem/136329962
>
Tyler Wilcock
Comment 2
2024-09-19 18:16:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33947
EWS
Comment 3
2024-09-20 07:41:07 PDT
Committed
283983@main
(c432de069570): <
https://commits.webkit.org/283983@main
> Reviewed commits have been landed. Closing PR #33947 and removing active labels.
EWS
Comment 4
2024-09-20 18:19:07 PDT
Committed
280938.366@safari-7619-branch
(3ea2f93b7803): <
https://commits.webkit.org/280938.366@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1875 and removing active labels.
EWS
Comment 5
2024-10-15 17:46:45 PDT
Committed
283286.286@safari-7620-branch
(7b5dc7e20a8c): <
https://commits.webkit.org/283286.286@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2026 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug